--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -23292,8 +23292,7 @@ assets:
       - CocoCity
     category: 101-residential
     dependencies:
-      - simtropolis/26808-vip-girafe-vnaoned-carpack-vol01-vol02-v2
-      - simtropolis/15287-bsc-mega-props-sg-vol-01-v3
+      - sc4evermore/3-sc4d-lex-legacy-bsc-common-dependencies-pack
     description: "<body>\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\t<div style=\"position:absolute; top:0px; right:0px;\">\n\t\t\t\t\t\t\t\t  <img _title=\"This is a Popular File\" alt=\"\" class=\"ipsImage\" data-ipstooltip=\"\" src=\"https://www.simtropolis.com/library/misc/big-heart-icon.png\" style=\"\" width=\"34\" height=\"53\">\n\t\t\t\t\t\t\t\t</div>\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\n<p>\n\t<span style=\"font-size:14px;\">e Pyeonhansesang is a apartment in South Korea.</span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"border:0px;padding:0px;vertical-align:baseline;\">R$$ 4x3 </span></span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"border:0px;padding:0px;vertical-align:baseline;\">Capacity Satisfied 2981~4112</span></span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"border:0px;padding:0px;vertical-align:baseline;\">Stage\_5</span></span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\">Bulldoze Cost 1617</span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t\_\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\">LM</span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\">Plop Cost 110000</span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\">Bulldoze Cost 100</span>\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t\_\n</p>\n\n<p style=\"background-color:#ffffff;border:0px;color:#000000;font-size:11px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\">Dependency</span>\n</p>\n\n<p style=\"border:0px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"background-color:#f2f2f2;color:#474747;\"><a href=\"https://community.simtropolis.com/files/file/26808-vip-girafe-vnaoned-carpack-vol01-vol02-v2/\" rel=\"\">VIP Girafe-Vnaoned CarPack Vol01-Vol02 v2</a></span></span>\n</p>\n\n<p style=\"border:0px;padding:0px;vertical-align:baseline;\">\n\t<u style=\"background-color:#ffffff;color:#000000;font-size:15px;\"><a href=\"https://community.simtropolis.com/files/file/15287-bsc-mega-props-sg-vol-01-v3/\" rel=\"\" style=\"background-color:transparent;color:#508bb7;\"><abbr style=\"border-bottom:none;\" title=\"BATT Squad Certification\">BSC</abbr><span>\_</span>MEGA Props SG Vol 01 v3</a></u>\n</p>\n\n<p style=\"border:0px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"background-color:#f2f2f2;color:#474747;\">※DarkNite Version</span></span>\n</p>\n\n<p style=\"border:0px;padding:0px;vertical-align:baseline;\">\n\t<span style=\"font-size:14px;\"><span style=\"background-color:#f2f2f2;color:#474747;\">SimFox_Day_n_Nite_Modd</span></span>\n</p>\n\n<p style=\"border:0px;padding:0px;vertical-align:baseline;\">\n\t\_\n</p>\n\n<p>\n\t\_\n</p>\n\n\t\t\t\t\t\t</body>"
     images:
       - https://www.simtropolis.com/objects/screens/monthly_2024_11/67377f8e9efb6_01-15--131731685185.png.e7a67b96ecccba1ffd3cea05a3b03cdd.png
@@ -23304,7 +23303,7 @@ assets:
       - https://www.simtropolis.com/objects/screens/monthly_2024_11/Add.png.02eca0f2ea8cf0069cfe3b5cddfdc646.png
     lastModified: 2024-11-15T17:29:13.000Z
     meta:
-      timestamp: 2024-11-17T16:00:57.230Z
+      timestamp: 2024-11-18T14:36:08.234Z
       version: 1
     name: Coco_e Pyeonhansesang_APT
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/673781b189dcb_01-15--131731685185.thumb.png.db754f5982b034ebdc67df0919389cd7.png
@@ -23601,6 +23600,24 @@ assets:
     name: Flat Nerenhorst
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/6737c7b472f88_FlatNerenhorstdag.thumb.jpeg.15ed7d40cc4a97407365cbe1570c4e96.jpeg
     url: https://community.simtropolis.com/files/file/36552-flat-nerenhorst/
+  simtropolis/36564:
+    assetId: simtropolis/36564-esa-1920
+    authors:
+      - Oidaas
+    category: 101-residential
+    lastModified: 2024-11-18T19:32:10.000Z
+    name: ESA 1920
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/673b963a584dc_NewCity-Sep.4161731956348.thumb.jpg.f306511bb3bcf6dd7290f0c35292bd92.jpg
+    url: https://community.simtropolis.com/files/file/36564-esa-1920/
+  simtropolis/36565:
+    assetId: simtropolis/36565-ny-diagonal-midrise-growify-set
+    authors:
+      - Kel9509
+    category: 101-residential
+    lastModified: 2024-11-19T02:15:25.000Z
+    name: NY Diagonal Midrise Growify Set
+    thumbnail: https://www.simtropolis.com/objects/screens/monthly_2024_11/673bf40bb51ea_NYDiagonalMidriseSetGrowify1.thumb.jpg.7fc5b9804ae86e0834e488f483dcf1a8.jpg
+    url: https://community.simtropolis.com/files/file/36565-ny-diagonal-midrise-growify-set/
   simtropolis/3663:
     assetId: simtropolis/3663-modern-row-houses-set
     authors:
@@ -24662,4 +24679,4 @@ assets:
     url: https://community.simtropolis.com/files/file/992-small-bb-the-greeley-house/
 
 meta:
-  timestamp: 2024-11-18T07:06:25.278Z
+  timestamp: 2024-11-19T06:11:28.140Z
