Common dependency detection

--- a/src/scripts/data/assets/github/uncategorized.yaml
+++ b/src/scripts/data/assets/github/uncategorized.yaml
@@ -2,7 +2,7 @@ assets:
   github/0xC0000054/sc4-auto-run-cheats:
     assetId: github/0xC0000054/sc4-auto-run-cheats
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     download: https://github.com/0xC0000054/sc4-auto-run-cheats/releases/download/v{version}/SC4AutoRunCheats.zip
     filename: SC4AutoRunCheats.zip
     lastModified: 2024-08-26T21:53:25.000Z
@@ -11,7 +11,7 @@ assets:
   github/0xC0000054/sc4-auto-save:
     assetId: github/0xC0000054/sc4-auto-save
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-auto-save/releases/download/v{version}/SC4AutoSave.zip
@@ -39,7 +39,7 @@ assets:
   github/0xC0000054/sc4-city-date-sync:
     assetId: github/0xC0000054/sc4-city-date-sync
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-city-date-sync/releases/download/v{version}/SC4CityDateSync.zip
@@ -67,7 +67,7 @@ assets:
   github/0xC0000054/sc4-city-lottery-ordinance:
     assetId: github/0xC0000054/sc4-city-lottery-ordinance
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-city-lottery-ordinance/releases/download/v{version}/SC4CityLotteryOrdinance.zip
@@ -92,11 +92,11 @@ assets:
     size: 67406
     textures: []
     uncompressed: 157514
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-cpu-options:
     assetId: github/0xC0000054/sc4-cpu-options
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-cpu-options/releases/download/v{version}/SC4CPUOptions.zip
@@ -124,7 +124,7 @@ assets:
   github/0xC0000054/sc4-custom-budget-departments:
     assetId: github/0xC0000054/sc4-custom-budget-departments
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-custom-budget-departments/releases/download/v{version}/SC4CustomBudgetDepartments.zip
@@ -151,7 +151,7 @@ assets:
   github/0xC0000054/sc4-dbpf-loading:
     assetId: github/0xC0000054/sc4-dbpf-loading
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-dbpf-loading/releases/download/v{version}/SC4DBPFLoading.zip
@@ -178,7 +178,7 @@ assets:
   github/0xC0000054/sc4-disable-cheats:
     assetId: github/0xC0000054/sc4-disable-cheats
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     download: https://github.com/0xC0000054/sc4-disable-cheats/releases/download/v{version}/SC4DisableCheats.zip
     lastModified: 2024-11-18T09:48:18.355Z
     repository: https://github.com/0xC0000054/sc4-disable-cheats
@@ -186,7 +186,7 @@ assets:
   github/0xC0000054/sc4-disable-demolition-animation:
     assetId: github/0xC0000054/sc4-disable-demolition-animation
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-disable-demolition-animation/releases/download/v{version}/SC4DisableDemolitionAnimation.zip
@@ -209,11 +209,11 @@ assets:
     size: 36113
     textures: []
     uncompressed: 81574
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-disable-lot-plop-smoke:
     assetId: github/0xC0000054/sc4-disable-lot-plop-smoke
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-disable-lot-plop-smoke/releases/download/v{version}/SC4DisableLotPlopSmoke.zip
@@ -236,11 +236,11 @@ assets:
     size: 36096
     textures: []
     uncompressed: 81426
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-disable-network-construction-sounds:
     assetId: github/0xC0000054/sc4-disable-network-construction-sounds
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-disable-network-construction-sounds/releases/download/v{version}/SC4DisableNetworkConstructionSounds.zip
@@ -263,11 +263,11 @@ assets:
     size: 36595
     textures: []
     uncompressed: 81614
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-graphics-options:
     assetId: github/0xC0000054/sc4-graphics-options
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-graphics-options/releases/download/v{version}/SC4GraphicsOptions.zip
@@ -295,7 +295,7 @@ assets:
   github/0xC0000054/sc4-growify:
     assetId: github/0xC0000054/sc4-growify
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-growify/releases/download/v{version}/SC4Growify.zip
@@ -322,7 +322,7 @@ assets:
   github/0xC0000054/sc4-humane-society-ordinance:
     assetId: github/0xC0000054/sc4-humane-society-ordinance
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-humane-society-ordinance/releases/download/v{version}/SC4HumaneSocietyOrdinance.zip
@@ -345,11 +345,11 @@ assets:
     size: 62653
     textures: []
     uncompressed: 143068
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-legalize-gambling-ordinance-upgrade:
     assetId: github/0xC0000054/sc4-legalize-gambling-ordinance-upgrade
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-legalize-gambling-ordinance-upgrade/releases/download/v{version}/SC4LegalizeGamblingUpgrade.zip
@@ -377,7 +377,7 @@ assets:
   github/0xC0000054/sc4-more-building-styles:
     assetId: github/0xC0000054/sc4-more-building-styles
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     dependencies: []
     download: https://github.com/0xC0000054/sc4-more-building-styles/releases/download/v{version}/SC4MoreBuildingStyles.zip
     filename: SC4MoreBuildingStyles.zip
@@ -400,7 +400,7 @@ assets:
   github/0xC0000054/sc4-more-demand-info:
     assetId: github/0xC0000054/sc4-more-demand-info
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings:
       - bulldoze: 100
         cost: 15000
@@ -453,7 +453,7 @@ assets:
           - 8956a699
         size: 1x1
         textures:
-          - "258e0000"
+          - '258e0000'
           - 258d0000
     meta:
       timestamp: 2024-11-18T09:48:18.355Z
@@ -476,7 +476,7 @@ assets:
   github/0xC0000054/sc4-no-kick-out:
     assetId: github/0xC0000054/sc4-no-kick-out
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-no-kick-out/releases/download/v{version}/SC4NoKickOut.zip
@@ -499,11 +499,11 @@ assets:
     size: 37433
     textures: []
     uncompressed: 82784
-    version: "1.0"
+    version: '1.0'
   github/0xC0000054/sc4-query-ui-hooks:
     assetId: github/0xC0000054/sc4-query-ui-hooks
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-query-ui-hooks/releases/download/v{version}/SC4QueryUIHooks.zip
@@ -531,7 +531,7 @@ assets:
   github/0xC0000054/sc4-region-census:
     assetId: github/0xC0000054/sc4-region-census
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-region-census/releases/download/v{version}/SC4RegionCensus.zip
@@ -559,7 +559,7 @@ assets:
   github/0xC0000054/sc4-remove-phantom-budget-items:
     assetId: github/0xC0000054/sc4-remove-phantom-budget-items
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-remove-phantom-budget-items/releases/download/v{version}/SC4RemovePhantomBudgetItems.zip
@@ -586,7 +586,7 @@ assets:
   github/0xC0000054/sc4-resource-loading-hooks:
     assetId: github/0xC0000054/sc4-resource-loading-hooks
     authors:
-      - "0xC0000054"
+      - '0xC0000054'
     buildings: []
     dependencies: []
     download: https://github.com/0xC0000054/sc4-resource-loading-hooks/releases/download/v{version}/SC4ResourceLoadingHooks.zip
@@ -626,7 +626,7 @@ assets:
     filename: 7z2408-arm.exe
     lastModified: 2024-08-12T11:56:47.000Z
     repository: https://github.com/ip7z/7zip
-    version: "24.08"
+    version: '24.08'
   github/memo33/cam-exemplar-patch:
     assetId: github/memo33/cam-exemplar-patch
     authors:
