--- a/src/scripts/data/assets/toutsimcities/uncategorized.yaml
+++ b/src/scripts/data/assets/toutsimcities/uncategorized.yaml
@@ -5,21 +5,21 @@ assets:
       - toutsimcities
     download: https://www.toutsimcities.com/downloads/start/1686
     lastModified: 2010-04-18T00:00:00.000Z
-    version: "1.0"
+    version: '1.0'
   toutsimcities/1780:
     assetId: toutsimcities/1780-namspopof-props-pack-vol-1
     authors:
       - toutsimcities
     download: https://www.toutsimcities.com/downloads/start/1780
     lastModified: 2010-10-14T00:00:00.000Z
-    version: "1.0"
+    version: '1.0'
   toutsimcities/1882:
     assetId: toutsimcities/1882-namspopof-props-pack-vol-2
     authors:
       - toutsimcities
     download: https://www.toutsimcities.com/downloads/start/1882
     lastModified: 2011-08-17T00:00:00.000Z
-    version: "1.0"
+    version: '1.0'
 
 meta:
   timestamp: 2024-11-19T07:10:21.912Z
