--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -23303,6 +23303,7 @@ assets:
       - https://www.simtropolis.com/objects/screens/monthly_2024_11/67377fa01a67c_.png.ed57e13bc44fae0254d6c8f78f87a722.png
       - https://www.simtropolis.com/objects/screens/monthly_2024_11/67377fa4b2ae4_-.png.1465e8fb5b4823f89f9adecc1cc4f48d.png
       - https://www.simtropolis.com/objects/screens/monthly_2024_11/Add.png.02eca0f2ea8cf0069cfe3b5cddfdc646.png
+    lastModified: 2024-11-15T17:29:13.000Z
     meta:
       timestamp: 2024-11-19T11:51:30.689Z
       version: 1
