--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
     "postinstall": "husky install && electron-builder install-app-deps",
-    "precommit": "biome check --fix --staged",
+    "precommit": "lint-staged",
     "preview": "electron-vite preview",
     "typecheck": "yarn typecheck:main && yarn typecheck:renderer && yarn typecheck:scripts",
     "typecheck:main": "tsc --noEmit -p tsconfig.main.json --composite false",
@@ -80,6 +80,7 @@
     "electron-builder": "25.1.8",
     "electron-vite": "2.3.0",
     "husky": "8.0.3",
+    "lint-staged": "15.2.10",
     "node-html-parser": "6.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
