--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sc4-plugin-manager",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
   "description": "SC4 Plugin Manager interface using Electron",
   "homepage": "https://github.com/Salinco96/sc4-plugin-manager#readme",
   "repository": {
