--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -21,8 +21,8 @@ jobs:
           node-version: 20.x
           cache: yarn
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --immutable
-      - name: Run ESLint
+        run: yarn install --immutable
+      - name: Run Biome
         run: yarn lint
       - name: Run TypeScript
         run: yarn typecheck
