--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Set up Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 20.x
           cache: yarn
       - name: Install dependencies
         run: yarn install --immutable
-      - name: Run ESLint
+      - name: Run Biome
         run: yarn lint
       - name: Run TypeScript
         run: yarn typecheck
